--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,23 @@
 %test.quarkus.datasource.db-kind=h2
 %test.quarkus.datasource.username=sa
 %test.quarkus.datasource.password=sa
-%test.quarkus.datasource.jdbc.url=jdbc:h2:~/core-person-api
+%test.quarkus.datasource.jdbc.url=jdbc:h2:~/core_person_api
 %test.quarkus.http.port=8080
 %test.quarkus.http.test-port=8083
 %test.quarkus.http.test-ssl-port=8446
 %test.quarkus.hibernate-orm.database.default-schema=public
-%test.quarkus.hibernate-orm.database.generation=drop-and-create
+%test.quarkus.hibernate-orm.database.generation=update
 
 %dev.quarkus.datasource.db-kind=postgresql
 %dev.quarkus.datasource.username=postgres
-%dev.quarkus.datasource.password=1234
+%dev.quarkus.datasource.password=12345
 %dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres
 %dev.quarkus.hibernate-orm.database.default-schema=parameterpersons
 %dev.quarkus.hibernate-orm.log.sql=false
-%dev.quarkus.hibernate-orm.database.generation=none
+%dev.quarkus.hibernate-orm.database.generation=update
 %dev.quarkus.http.port=8080
 %dev.quarkus.http.test-port=8083
 %dev.quarkus.http.test-ssl-port=8446
 
 quarkus.swagger-ui.always-include=true
 quarkus.swagger-ui.path=/swagger
-
